Create redimentary menu sect of page
Two boxes for text and image.
Style properly, excluding image itself, and final text.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tabooleh Restaurant</title>
+    <title>Tabooleh | Mediteranean Cuisine</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 
@@ -35,12 +35,22 @@
         <img src="./Tabooleh-logo-v2.jpeg" class="logo">
         <div class="mid-container-1">
             <div>HOOKAH</div>
-            <div class="diamond">✵</div>
+            <div class="stars">✵</div>
             <div>RESTAURANT</div>
-            <div class="diamond">✵</div>
+            <div class="stars">✵</div>
             <div>GROCERY</div>
         </div> 
-        <button class="down-arrow">⧩</button>       
+        <button class="down-arrow">⧩</button>
+        <div class="menu-image-and-box">
+            <div class="menu-image">
+                <img src>
+            </div>   
+            <div class="menu-box">
+                <div class="our-menus">Our Menus</div>
+                <div class="menu-para">A bunch of placeholder text describing the menu offerings in the form of a paragraph</div>
+                <button class="menu view-menu">VIEW MENU</button>
+            </div>
+        </div>    
     </div>
 </body>
 </html>
