Add styles and destination to .bounce button
Add bouncing animation
and destination to second sect of website

--- a/index.html
+++ b/index.html
@@ -40,17 +40,19 @@
             <div class="stars">✵</div>
             <div>GROCERY</div>
         </div> 
-        <button class="down-arrow">⧩</button>
-        <div class="menu-image-and-box">
-            <div class="menu-image">
-                <img src>
-            </div>   
-            <div class="menu-box">
-                <div class="our-menus">Our Menus</div>
-                <div class="menu-para">A bunch of placeholder text describing the menu offerings in the form of a paragraph</div>
-                <button class="menu view-menu">VIEW MENU</button>
-            </div>
-        </div>    
+        <a class="bounce" href="#destination-1">⧩</a>
+        <section id="destination-1">
+            <div class="menu-image-and-box">
+                <div class="menu-image">
+                    <img src>
+                </div>   
+                <div class="menu-box">
+                    <div class="our-menus">Our Menus</div>
+                    <div class="menu-para">A bunch of placeholder text describing the menu offerings in the form of a paragraph</div>
+                    <button class="view-menu">VIEW MENU</button>
+                </div>
+            </div>  
+        </section>  
     </div>
 </body>
 </html>
