--- a/index.html
+++ b/index.html
@@ -23,10 +23,9 @@
         </div>
         <div class="sticky-sect">
             <div class="top-container">
-                <nav class="page-selections">HOOKAH</nav>
-                <nav class="page-selections">GROCERY</nav>
+                <a class="page-selections" href="#destination-2">HOOKAH</a>
+                <a class="page-selections" href="#destination-3">GROCERY</a>
                 <nav class="page-selections">HOURS</nav>
-                <nav class="page-selections">CONTACT</nav>
                 <nav class="page-selections">OUR STORY</nav>
                 <nav class="page-selections menu">MENU</nav>
             </div>
@@ -47,12 +46,43 @@
                     <img src>
                 </div>   
                 <div class="menu-box">
-                    <div class="our-menus">Our Menus</div>
-                    <div class="menu-para">A bunch of placeholder text describing the menu offerings in the form of a paragraph</div>
+                    <div class="our-menus">OUR MENUS</div>
+                    <p class="menu-para">A bunch of placeholder text describing the menu offerings in the form of a paragraph</p>
                     <button class="view-menu">VIEW MENU</button>
                 </div>
             </div>  
         </section>  
+        <p class="para-2">A bunch of quirky placeholder text describing of what tabooleh offers and how welcoming it is, in the form of a paragraph</p>
+        
+        <section id="destination-2">
+            <div class="hookah-image-and-box">
+                <div class="hookah-box">
+                    <div class="hookah-lounge">HOOKAH LOUNGE</div>
+                    <p class="hookah-para">A bunch of placeholder text describing the hookah lounge in the form of a paragraph</p>
+                </div>
+                <div class="hookah-image">
+                    <img src>
+                </div>   
+            </div>  
+        </section>  
+        <p class="para-2">A bunch of quirky placeholder text describing of what tabooleh offers and how welcoming it is, in the form of a paragraph</p>
+
+        <section id="destination-3">
+            <div class="menu-image-and-box">
+                <div class="menu-image">
+                    <img src>
+                </div>   
+                <div class="menu-box">
+                    <div class="our-menus">GROCERY</div>
+                    <p class="menu-para">A bunch of placeholder text describing the grocery offerings in the form of a paragraph</p>
+                </div>
+            </div>  
+        </section>  
+        <div class="mid-container-2">
+            <div class="stars">✵</div>
+            <div>HOURS</div>
+            <div class="stars">✵</div>
+        </div> 
     </div>
 </body>
 </html>
