Add and style 'Hours' sect

--- a/index.html
+++ b/index.html
@@ -83,6 +83,15 @@
             <div>HOURS</div>
             <div class="stars">✵</div>
         </div> 
+        <div class="hours-sect">
+            <p><strong class="bold">SUNDAY:</strong> 12PM - 9PM</p>
+            <p><strong class="bold">MONDAY:</strong> CLOSED</p>
+            <p><strong class="bold">TUESDAY:</strong> 12PM - 9PM</p>
+            <p><strong class="bold">WEDNESDAY:</strong> 12PM - 9PM</p>
+            <p><strong class="bold">THURSDAY:</strong> 12PM - 9PM</p>
+            <p><strong class="bold">FRIDAY:</strong> 12PM - 9PM</p>
+            <p><strong class="bold">SATURDAY:</strong> 12PM - 9PM</p>
+        </div>
     </div>
 </body>
 </html>
