Begin making 'our story' sect
After finalizing 'hours' sect

--- a/index.html
+++ b/index.html
@@ -92,6 +92,9 @@
             <p><strong class="bold">FRIDAY:</strong> 12PM - 9PM</p>
             <p><strong class="bold">SATURDAY:</strong> 12PM - 9PM</p>
         </div>
+        <div class="our-story-sect">
+            A bunch of filler text
+        </div>
     </div>
 </body>
 </html>
