upload images for menu and hookah sections

--- a/index.html
+++ b/index.html
@@ -42,9 +42,7 @@
         <a class="bounce" href="#destination-1">⧩</a>
         <section id="destination-1">
             <div class="menu-image-and-box">
-                <div class="menu-image">
-                    <img src>
-                </div>   
+                <img src="./Gyro-image.jpeg" class="menu-image">
                 <div class="menu-box">
                     <div class="our-menus">OUR MENUS</div>
                     <p class="menu-para">A bunch of placeholder text describing the menu offerings in the form of a paragraph</p>
@@ -60,13 +58,10 @@
                     <div class="hookah-lounge">HOOKAH LOUNGE</div>
                     <p class="hookah-para">A bunch of placeholder text describing the hookah lounge in the form of a paragraph</p>
                 </div>
-                <div class="hookah-image">
-                    <img src>
-                </div>   
+                <img src="./Hookah-cafe-image.jpeg" class="hookah-image">
             </div>  
         </section>  
         <p class="para-2">A bunch of quirky placeholder text describing of what tabooleh offers and how welcoming it is, in the form of a paragraph</p>
-
         <section id="destination-3">
             <div class="menu-image-and-box">
                 <div class="menu-image">
@@ -78,22 +73,33 @@
                 </div>
             </div>  
         </section>  
-        <div class="mid-container-2">
-            <div class="stars">✵</div>
-            <div>HOURS</div>
-            <div class="stars">✵</div>
-        </div> 
-        <div class="hours-sect">
-            <p><strong class="bold">SUNDAY:</strong> 12PM - 9PM</p>
-            <p><strong class="bold">MONDAY:</strong> CLOSED</p>
-            <p><strong class="bold">TUESDAY:</strong> 12PM - 9PM</p>
-            <p><strong class="bold">WEDNESDAY:</strong> 12PM - 9PM</p>
-            <p><strong class="bold">THURSDAY:</strong> 12PM - 9PM</p>
-            <p><strong class="bold">FRIDAY:</strong> 12PM - 9PM</p>
-            <p><strong class="bold">SATURDAY:</strong> 12PM - 9PM</p>
+        <div class="hours-area">
+            <div class="hours-pic-left">
+                <img src="">
+            </div>
+            <div class="hours-sect-and-title">
+                <div class="mid-container-2">
+                    <div class="stars">✵</div>
+                    <div>HOURS</div>
+                    <div class="stars">✵</div>
+                </div> 
+                <div class="hours-sect">
+                    <p><strong class="bold">SUNDAY:</strong> 12PM - 9PM</p>
+                    <p><strong class="bold">MONDAY:</strong> CLOSED</p>
+                    <p><strong class="bold">TUESDAY:</strong> 12PM - 9PM</p>
+                    <p><strong class="bold">WEDNESDAY:</strong> 12PM - 9PM</p>
+                    <p><strong class="bold">THURSDAY:</strong> 12PM - 9PM</p>
+                    <p><strong class="bold">FRIDAY:</strong> 12PM - 9PM</p>
+                    <p><strong class="bold">SATURDAY:</strong> 12PM - 9PM</p>
+                </div>
+            </div>
+            <div class="hours-pic-right">
+                <img src="">
+            </div>
         </div>
         <div class="our-story-sect">
-            A bunch of filler text
+            <div class="our-story">OUR STORY</div>
+            <p>A bunch of filler text of a heart warming story about Tabooleh</p>
         </div>
     </div>
 </body>
