Upload grocery image in the grocery image sect

--- a/index.html
+++ b/index.html
@@ -64,9 +64,7 @@
         <p class="para-2">A bunch of quirky placeholder text describing of what tabooleh offers and how welcoming it is, in the form of a paragraph</p>
         <section id="destination-3">
             <div class="menu-image-and-box">
-                <div class="menu-image">
-                    <img src>
-                </div>   
+                <img src="./Tabooleh-grocery.jpeg" class="menu-image">
                 <div class="menu-box">
                     <div class="our-menus">GROCERY</div>
                     <p class="menu-para">A bunch of placeholder text describing the grocery offerings in the form of a paragraph</p>
