Small tweaks to HTML and CSS

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <div class="top-container">
                 <a class="page-selections" href="#destination-2">HOOKAH</a>
                 <a class="page-selections" href="#destination-3">GROCERY</a>
-                <nav class="page-selections">HOURS</nav>
+                <a class="page-selections" href="#destination-4">HOURS</a>
                 <nav class="page-selections">OUR STORY</nav>
                 <nav class="page-selections menu">MENU</nav>
             </div>
@@ -71,7 +71,7 @@
                 </div>
             </div>  
         </section>  
-        <div class="hours-area">
+        <div class="hours-area" id="destination-4">
             <div class="hours-pic-left">
                 <img src="">
             </div>
